# madruga-research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  WIKI.md  docker-compose.yml  ingest_papers.py  main.py  mcp_server.py  pyproject.toml
agent/: agent.py  provider.py
core/: logger.py  schemas.py
ingestion/: pdf.py
kb/: embeddings.py  storage.py  vector_store.py
llm/: agent.py
parsers/: pdf.py  web.py
tools/: kb_tools.py
wiki/: storage.py
